Fix nav bar flex behaviours on small screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,14 +243,7 @@ nav {
 }
 
 .nav-container ul {
-    width: 66.67%;
-    text-align: end;
-}
-
-
-.nav-container li {
-    display: inline-block;
-    padding: 0 30px;
+    width: 100%;
 }
 
 nav p,
@@ -265,7 +258,7 @@ nav a:hover {
 }
 
 nav .tagline {
-    width: 33.33%;
+    width: 100%;
     font-size: 1.25rem;
     font-weight: bold;
 }
@@ -418,6 +411,20 @@ nav .tagline {
 
     .flex-item-67 {
         flex: 0 0 66.7%;
+    }
+
+    .nav-container ul {
+        width: 66.67%;
+        text-align: end;
+    }
+
+    nav .tagline {
+        width: 33.33%;
+    }
+    
+    .nav-container li {
+        display: inline-block;
+        padding: 0 30px;
     }
 
     .hero-banner {
